test/fixtures/commonmark/bad.txt
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3061

.
[foo]

> [foo]: /url
.
<p><a href="/url">foo</a></p>
<blockquote>
</blockquote>
.

error:

<p><a href="/url">foo</a></p>
<blockquote>
</blockquote>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3448

.
>
.
<blockquote>
</blockquote>
.

error:

<blockquote>
</blockquote>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 3456

.
>
>  
> 
.
<blockquote>
</blockquote>
.

error:

<blockquote>
</blockquote>


